@@ -2,7 +2,7 @@
  * \file      socket_server.c
  * \author    Clemens Kresser
  * \date      Mar 23, 2017
- * \copyright Copyright 2017-2020 Clemens Kresser. All rights reserved.
+ * \copyright Copyright  2017-2021 Clemens Kresser. All rights reserved.
  * \license   This project is released under the MIT License.
  * \brief     Event based socket server implementation
  *
