@@ -2,7 +2,7 @@
  * \file      base64.h
  * \author    Clemens Kresser
  * \date      Apr 14, 2017
- * \copyright Copyright 2017-2020 Clemens Kresser. All rights reserved.
+ * \copyright Copyright  2017-2021 Clemens Kresser. All rights reserved.
  * \license   This project is released under the MIT License.
  * \brief     Handles base64 encoding
  *
