@@ -2,7 +2,7 @@
  * \file      utf8.h
  * \author    Clemens Kresser
  * \date      Apr 9, 2017
- * \copyright Copyright 2017-2020 Clemens Kresser. All rights reserved.
+ * \copyright Copyright  2017-2021 Clemens Kresser. All rights reserved.
  * \license   This project is released under the MIT License.
  * \brief     UTF8 validation functions that are used for the websockets
  *
